# bloodtest-mcp-server

./: .dockerignore  .env.example  .gitignore  .sentryclirc  CLAUDE.md  Dockerfile  Dockerfile.optimized  HEALTH_LIFESTYLE_WORKFLOW.md  MIGRATION_CHECKLIST.md  Makefile  README.md  __init__.py  client_test.py  docker-compose.yml  gtd.yaml  integrated_server.py  main.py  minimal_test.py  pyproject.toml  railway.json  railway_server.py  requirements.txt  run_all_integration_tests.sh  run_health_lifestyle.py  server.py  simple_api_server.py  start_server.py  strategy_book_config.yaml  validate_mcp_deployment.py  validate_railway_deployment.py
.cursor/: mcp.json
.windsurf/: mcp.json
bloodtest_tools/: __init__.py  api.py  mcp_tool.py  reference_values.py
books/: gtd.yaml  health_lifestyle_workflow.yaml  strategy_book_config.yaml  structure.yaml
docs/: sse_endpoint.md
faiss_index/: getting_things_done_knowledge.faiss  getting_things_done_knowledge.pkl  getting_things_done_knowledge_hashes.json  supplement-therapy_hashes.json
resources/: structure.yaml
scripts/: init_rag.py  test_api.py
temp_faiss/: supplement-therapy.pkl
testdata/: FINAL_SUCCESS_REPORT.md  FINAL_TEST_RESULTS.md  README.md  TEST_DATA_GUIDE.md  comprehensive_api_tests.json  comprehensive_integration_tests.json  comprehensive_mcp_tool_tests.json  comprehensive_rag_tests.json  comprehensive_workflow_tests.json  error_handling_edge_cases.json  performance_load_tests.json  realistic_blood_analysis_scenarios.json  run_all_tests.sh  sample_blood_test_data.json  smoke_test.py  test_execution_results.json  (+4 more)
(+13 files in other folders)
